<resources>
    <string name="app_name">Работа с данными</string>
    <string name="txt_save_to_file">Файл</string>
    <string name="txt_save_to_shar_pref">Shared Preference</string>
    <string name="txt_save_to_local_var">Локальная переменная</string>
    <string name="txt_editText_hint">Введите текст</string>
    <string name="txt_clear_all">Очистить всё</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>