<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingTop="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        android:paddingVertical="30dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_editText_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_text">

            <TextView
                style="@style/button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_save_to_local_var"
                app:layout_constraintBottom_toBottomOf="@id/btn_save_local_var"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_save_local_var" />

            <ImageButton
                android:id="@+id/btn_save_local_var"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@null"
                android:scaleType="fitStart"
                android:src="@drawable/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_save_to_shar_pref"
                app:layout_constraintBottom_toBottomOf="@id/btn_save_shar_perf"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_save_shar_perf" />

            <ImageButton
                android:id="@+id/btn_save_shar_perf"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="20dp"
                android:background="@null"
                android:scaleType="fitStart"
                android:src="@drawable/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save_local_var" />

            <TextView
                style="@style/button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_save_to_file"
                app:layout_constraintBottom_toBottomOf="@id/btn_save_file"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_save_file" />

            <ImageButton
                android:id="@+id/btn_save_file"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="20dp"
                android:background="@null"
                android:scaleType="fitStart"
                android:src="@drawable/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save_shar_perf" />

            <TextView
                style="@style/button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_clear_all"
                app:layout_constraintBottom_toBottomOf="@id/btn_clear_all"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_clear_all" />

            <ImageButton
                android:id="@+id/btn_clear_all"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="20dp"
                android:background="@null"
                android:scaleType="fitStart"
                android:src="@drawable/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save_file" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btn_open"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginVertical="20dp"
            android:background="@null"
            android:scaleType="fitStart"
            android:src="@drawable/open_folder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttons" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="30dp"
            android:minHeight="40dp"
            android:background="@drawable/bordered_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_open">

            <TextView
                android:id="@+id/output_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textSize="16sp" />
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>